# non_deterministic_sw_eng

./: .gitignore  COMPANION_REPO_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  TASK_5_1_SCAN_RESULTS.md  implementation_log.md
.github/ISSUE_TEMPLATE/: missing-pattern.md  outdated-example.md
.github/workflows/: test-mcp-server.yml  validate-configs.yml
01-fundamentals/: README.md
02-specifications/: README.md  api-endpoint-spec.md  auth-middleware-spec.md  feature-spec-template.md
03-migrations/: README.md
03-migrations/react-class-to-hooks/: MIGRATION_PATTERN.md  MIGRATION_PROMPT.md  README.md  package.json  tsconfig.json
04-context-engineering/: README.md  maturity-model.md
04-context-engineering/agents-md/: full-stack-project.md  minimal.md  monorepo.md
04-context-engineering/claude/: CLAUDE.md
04-context-engineering/cursor-rules/: api-validation.mdc  security.mdc  testing.mdc
05-mcp-servers/: README.md
05-mcp-servers/company-docs-server/: README.md  pyproject.toml  requirements.txt  server.py
05-mcp-servers/company-docs-server/config/: claude_desktop_config.json  cursor_mcp.json
05-mcp-servers/setup-guides/: context7-setup.md
06-custom-agents/: README.md
06-custom-agents/claude-agents/: implementation-agent.md  planning-agent.md  review-agent.md
06-custom-agents/github-agents/: docs-agent.md  refactor-agent.md  test-agent.md  (+1 more)
07-enterprise-workflow/: README.md
08-security/: README.md
09-exercises/: README.md
09-testing/: README.md
10-reference/: README.md
99-todo/: COMPANION_REPO_PLAN.md  README.md  TASK_5_1_SCAN_RESULTS.md
(+64 files in other folders)
