[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-docs-mcp"
version = "0.1.0"
description = "MCP server for company documentation access"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "model-context-protocol", "documentation", "ai"]
authors = [
    { name = "Your Name", email = "your.email@company.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
company-docs-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
